--- a/translations/de/aria.de.yaml
+++ b/translations/de/aria.de.yaml
@@ -7,3 +7,4 @@ ctm:
             expand:     'Menü ausklappen: '
             collapse:   'Menü zuklappen: '
             back:       Zurück
+            to_menu:    Zum Menübutton
