--- a/translations/it/aria.it.yaml
+++ b/translations/it/aria.it.yaml
@@ -7,3 +7,4 @@ ctm:
             expand:     'Espandi menu: '
             collapse:   'Riduci menu: '
             back:       Indietro
+            to_menu:    Al pulsante del menu
