--- a/translations/fr/aria.fr.yaml
+++ b/translations/fr/aria.fr.yaml
@@ -8,3 +8,5 @@ ctm:
             collapse:   'Fermer le menu: '
             back:       Retour
             to_menu:    Bouton d'accès au menu
+
+        scroll_to_top:  Revenir en haut
